objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Conversion_SLA__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>Conversion SLA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Warm SLA In-policy</fullName>
                </value>
                <value>
                    <fullName>Warm SLA Out-of-policy</fullName>
                </value>
                <value>
                    <fullName>Hot SLA In-policy</fullName>
                </value>
                <value>
                    <fullName>Hot SLA Out-of-policy</fullName>
                </value>
                <value>
                    <fullName>Warm SLA In-policy Completed</fullName>
                </value>
                <value>
                    <fullName>Hot SLA In-policy Completed</fullName>
                </value>
                <value>
                    <fullName>Warm SLA Out-of-policy Completed</fullName>
                </value>
                <value>
                    <fullName>Hot SLA Out-of-policy Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Converted_Lead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Converted Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_QL_Age__c</fullName>
        <description>Displays number of days since lead became a QL (current QLs only).</description>
        <formula>IF( ISNULL(  LQS_Warm_or_Hot__c  ) , NULL, TODAY() -  QL_Warm_Hot_Date__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current QL Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Email__c</fullName>
        <description>Used for Employee Referrals</description>
        <inlineHelpText>Employee Referral Email</inlineHelpText>
        <label>GROW Employee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Forensics_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forensics List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historic_Trace__c</fullName>
        <label>Historic Trace</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IS_Lead_Action__c</fullName>
        <label>IS Lead Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead Generation</fullName>
                </value>
                <value>
                    <fullName>Lead Qualification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_PDG_Routing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To mark the record that has gone through PDG routing.</description>
        <label>Is PDG Routing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Just_Converted__c</fullName>
        <description>Gets stamped with true when converted from lead</description>
        <label>Just Converted</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LT_Age_in_Days__c</fullName>
        <formula>IF(IsConverted=true , ROUND(ConvertedDate - LastTransferDate ,0), ROUND(Today()- LastTransferDate ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LT Age in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Lead Legacy ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Academia</fullName>
                </value>
                <value>
                    <fullName>Aerospace</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Assay Development</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Basic Research</fullName>
                </value>
                <value>
                    <fullName>Biofuels</fullName>
                </value>
                <value>
                    <fullName>Biotherapeutics</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Clinical / Biomonitoring</fullName>
                </value>
                <value>
                    <fullName>Clinical Genetics and Diagnostics</fullName>
                </value>
                <value>
                    <fullName>Consumer products and Product Safety</fullName>
                </value>
                <value>
                    <fullName>Diagnostics</fullName>
                </value>
                <value>
                    <fullName>Drug Development</fullName>
                </value>
                <value>
                    <fullName>Drug Discovery</fullName>
                </value>
                <value>
                    <fullName>Electronic Components / Electroplating</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Food Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Food R&amp;D and Contract Testing</fullName>
                </value>
                <value>
                    <fullName>Foods &amp; Beverages</fullName>
                </value>
                <value>
                    <fullName>Forensics</fullName>
                </value>
                <value>
                    <fullName>Functional Genomics/Proteomics</fullName>
                </value>
                <value>
                    <fullName>General Genetics</fullName>
                </value>
                <value>
                    <fullName>General Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Genomics</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>High Throughput Screening</fullName>
                </value>
                <value>
                    <fullName>Homeland Security</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_by_Queue__c</fullName>
        <formula>IF(LEFT(OwnerId,3)=&quot;005&quot;,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner by Queue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PDG_Start_Time__c</fullName>
        <description>Gets stamped with the start time for the SLA</description>
        <label>PDG Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Packaging_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Packaging List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <label>Product Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Notes__c</fullName>
        <label>Prospect Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trial_End_Date__c</fullName>
        <label>Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Twitter_Handle__c</fullName>
        <label>Twitter Handle</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warm_Date_Only__c</fullName>
        <description>Captures the date only from the Warm Date field</description>
        <formula>DATEVALUE(Qualified_Lead_Warm_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warm Date Only</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>eq_Default_MQL__c</fullName>
        <description>Part of Eloqua integration. If the value of this field is TRUE, then the Lead is considered to be a Marketing Qualified Lead (MQL)</description>
        <label>Default MQL</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
                <value>
                    <fullName>True</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Created_by_Lead__c</fullName>
        <description>Field converts to Opp object.  Used to easily identify Opps that were created upon Lead conversion (field on Opp can be used in validations/workflow).</description>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CsWebUserID_INF__c</fullName>
        <label>INFCsWebUserID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_to_Convert__c</fullName>
        <formula>round(ConvertedDate - datevalue(CreatedDate),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Convert</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Did_Trigger_Run__c</fullName>
        <description>This field gets stamped with &quot;Yes Before Insert, or Yes Before Update&quot;</description>
        <label>Did Trigger Run?</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <label>Employee Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Lead_Rating__c</fullName>
        <formula>IF(CONTAINS(TEXT( Rating) , &quot;A&quot;), &quot;A Rating&quot;,
IF(CONTAINS(TEXT( Rating) , &quot;B&quot;), &quot;B Rating&quot;,
IF(CONTAINS(TEXT( Rating) , &quot;C&quot;), &quot;C Rating&quot;,

&quot;Other/None&quot;)))</formula>
        <label>INF Lead Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LQS_Digital_Lab__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>LQS - Digital Lab</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified Lead - Warm</fullName>
                </value>
                <value>
                    <fullName>Qualified Lead - Hot</fullName>
                </value>
                <value>
                    <fullName>Turnback</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Zero Stage</fullName>
                </value>
                <value>
                    <fullName>Create/Plan</fullName>
                </value>
                <value>
                    <fullName>Qualify</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Prove</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                    <isActive>false</isActive>
                    <label>Engaged</label>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                    <isActive>false</isActive>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Qualified Engaged</fullName>
                    <isActive>false</isActive>
                    <label>Qualified Engaged</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LQS_Food_Safety__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>LQS - Food Safety</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified Lead - Warm</fullName>
                </value>
                <value>
                    <fullName>Qualified Lead - Hot</fullName>
                </value>
                <value>
                    <fullName>Turnback</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Zero Stage</fullName>
                </value>
                <value>
                    <fullName>Create/Plan</fullName>
                </value>
                <value>
                    <fullName>Qualify</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Prove</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                    <isActive>false</isActive>
                    <label>Engaged</label>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                    <isActive>false</isActive>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Qualified Engaged</fullName>
                    <isActive>false</isActive>
                    <label>Qualified Engaged</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LQS_Soil_Solids__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>LQS - Soil/Solids</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified Lead - Warm</fullName>
                </value>
                <value>
                    <fullName>Qualified Lead - Hot</fullName>
                </value>
                <value>
                    <fullName>Turnback</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Zero Stage</fullName>
                </value>
                <value>
                    <fullName>Create/Plan</fullName>
                </value>
                <value>
                    <fullName>Qualify</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Prove</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                    <isActive>false</isActive>
                    <label>Engaged</label>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                    <isActive>false</isActive>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Qualified Engaged</fullName>
                    <isActive>false</isActive>
                    <label>Qualified Engaged</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LQS_Warm_or_Hot__c</fullName>
        <description>Populates when any LQS field is either Qualified Lead - Warm or Qualified Lead - Hot. If multiple LQS fields are Warm and Hot concurrently, this field will populate with Qualified Lead - Hot.</description>
        <formula>IF( 
OR(
ISPICKVAL(LQS_Air__c , &quot;Qualified Lead - Hot&quot;) ,
ISPICKVAL( LQS_Applied_Genomics__c, &quot;Qualified Lead - Hot&quot;),
ISPICKVAL( LQS_Chemicals__c, &quot;Qualified Lead - Hot&quot;), 
ISPICKVAL( LQS_Clinical_Studies__c, &quot;Qualified Lead - Hot&quot;), 
ISPICKVAL( LQS_Digital_Lab__c, &quot;Qualified Lead - Hot&quot;), 
ISPICKVAL( LQS_Disease_Research__c, &quot;Qualified Lead - Hot&quot;), 
ISPICKVAL( LQS_Drug_Discovery__c, &quot;Qualified Lead - Hot&quot;), 
ISPICKVAL( LQS_Energy__c, &quot;Qualified Lead - Hot&quot;), 
ISPICKVAL(LQS_Food_Quality__c, &quot;Qualified Lead - Hot&quot;), 
ISPICKVAL( LQS_Food_Safety__c, &quot;Qualified Lead - Hot&quot;), 
ISPICKVAL( LQS_Forensics_and_Security__c, &quot;Qualified Lead - Hot&quot;), 
ISPICKVAL( LQS_Geochemistry_Mining_and_Metals__c, &quot;Qualified Lead - Hot&quot;), 
ISPICKVAL( LQS_Material__c, &quot;Qualified Lead - Hot&quot;), 
ISPICKVAL( LQS_Maternal_Fetal_Health__c, &quot;Qualified Lead - Hot&quot;), 
ISPICKVAL( LQS_Newborn_Screening__c, &quot;Qualified Lead - Hot&quot;), 
ISPICKVAL( LQS_Geochemistry_Mining_and_Metals__c, &quot;Qualified Lead - Hot&quot;), 
ISPICKVAL( LQS_Pre_Clinical_Studies__c, &quot;Qualified Lead - Hot&quot;), 
ISPICKVAL( LQS_QA_QC_Drug_Manufacturing_Process__c, &quot;Qualified Lead - Hot&quot;), 
ISPICKVAL( LQS_Soil_Solids__c, &quot;Qualified Lead - Hot&quot;), 
ISPICKVAL( LQS_Strategic_Services__c, &quot;Qualified Lead - Hot&quot;), 
ISPICKVAL( LQS_Water__c, &quot;Qualified Lead - Hot&quot;),
ISPICKVAL( Lead_Qualification_Stage__c, &quot;Qualified Lead - Hot&quot;) ),
&quot;Qualified Lead - Hot&quot;, 

IF( 
OR(
ISPICKVAL(LQS_Air__c , &quot;Qualified Lead - Warm&quot;) ,
ISPICKVAL( LQS_Applied_Genomics__c, &quot;Qualified Lead - Warm&quot;),
ISPICKVAL( LQS_Chemicals__c, &quot;Qualified Lead - Warm&quot;), 
ISPICKVAL( LQS_Clinical_Studies__c, &quot;Qualified Lead - Warm&quot;), 
ISPICKVAL( LQS_Digital_Lab__c, &quot;Qualified Lead - Warm&quot;), 
ISPICKVAL( LQS_Disease_Research__c, &quot;Qualified Lead - Warm&quot;), 
ISPICKVAL( LQS_Drug_Discovery__c, &quot;Qualified Lead - Warm&quot;), 
ISPICKVAL( LQS_Energy__c, &quot;Qualified Lead - Warm&quot;), 
ISPICKVAL(LQS_Food_Quality__c, &quot;Qualified Lead - Warm&quot;), 
ISPICKVAL( LQS_Food_Safety__c, &quot;Qualified Lead - Warm&quot;), 
ISPICKVAL( LQS_Forensics_and_Security__c, &quot;Qualified Lead - Warm&quot;), 
ISPICKVAL( LQS_Geochemistry_Mining_and_Metals__c, &quot;Qualified Lead - Warm&quot;), 
ISPICKVAL( LQS_Material__c, &quot;Qualified Lead - Warm&quot;), 
ISPICKVAL( LQS_Maternal_Fetal_Health__c, &quot;Qualified Lead - Warm&quot;), 
ISPICKVAL( LQS_Newborn_Screening__c, &quot;Qualified Lead - Warm&quot;), 
ISPICKVAL( LQS_Geochemistry_Mining_and_Metals__c, &quot;Qualified Lead - Warm&quot;), 
ISPICKVAL( LQS_Pre_Clinical_Studies__c, &quot;Qualified Lead - Warm&quot;), 
ISPICKVAL( LQS_QA_QC_Drug_Manufacturing_Process__c, &quot;Qualified Lead - Warm&quot;), 
ISPICKVAL( LQS_Soil_Solids__c, &quot;Qualified Lead - Warm&quot;), 
ISPICKVAL( LQS_Strategic_Services__c, &quot;Qualified Lead - Warm&quot;), 
ISPICKVAL( LQS_Water__c, &quot;Qualified Lead - Warm&quot;),
ISPICKVAL( Lead_Qualification_Stage__c, &quot;Qualified Lead - Warm&quot;) ), 
&quot;Qualified Lead - Warm&quot;, 
null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LQS - Warm or Hot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Custom Lead Assignment Rule will be checked by Trigger</description>
        <label>Assign Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Created_By__c</fullName>
        <formula>CreatedBy.FirstName + &quot; &quot; +  CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Reminder_1__c</fullName>
        <formula>CreatedDate + 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Reminder 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Reminder_2__c</fullName>
        <formula>CreatedDate + 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Reminder 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Reminder_3__c</fullName>
        <formula>CreatedDate + 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Reminder 3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Source_DNA__c</fullName>
        <description>used by DNA Tech</description>
        <label>Lead Source-DNA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ad/Public Relations</fullName>
                </value>
                <value>
                    <fullName>Channel Partner - End User</fullName>
                </value>
                <value>
                    <fullName>Cold Call</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Download - FinchTV</fullName>
                </value>
                <value>
                    <fullName>Email Inquiry</fullName>
                </value>
                <value>
                    <fullName>Email Response</fullName>
                </value>
                <value>
                    <fullName>Existing Customer</fullName>
                </value>
                <value>
                    <fullName>GeneSifter AE web download</fullName>
                </value>
                <value>
                    <fullName>GeneSifter Trial Request</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner - Applied Biosystems</fullName>
                </value>
                <value>
                    <fullName>Partner Opportunity</fullName>
                </value>
                <value>
                    <fullName>Phone Inquiry</fullName>
                </value>
                <value>
                    <fullName>SEM - Google/Yahoo</fullName>
                </value>
                <value>
                    <fullName>Trade Show - 454 User Conf Leads 9 08</fullName>
                </value>
                <value>
                    <fullName>Trade Show - AACR 2009</fullName>
                </value>
                <value>
                    <fullName>Trade Show - ABRF 2008 Salt Lake City</fullName>
                </value>
                <value>
                    <fullName>Trade Show - ABRF 2009 Memphis</fullName>
                </value>
                <value>
                    <fullName>Trade Show - ABRF 2010 Sacramento</fullName>
                </value>
                <value>
                    <fullName>Trade Show - ABRF 2011 San Antonio</fullName>
                </value>
                <value>
                    <fullName>Trade Show - ASHG 2008</fullName>
                </value>
                <value>
                    <fullName>Trade Show - CHI SD 2009</fullName>
                </value>
                <value>
                    <fullName>Trade Show - SOLiD User Group 10-08</fullName>
                </value>
                <value>
                    <fullName>Trade Show – SOLiD User Group 10-09</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Webinar - Channel - Aug2009 - Opened</fullName>
                </value>
                <value>
                    <fullName>Webinar - GEX Profiling - Aug2009</fullName>
                </value>
                <value>
                    <fullName>Webinar - GSAE Partner Program - Aug2009</fullName>
                </value>
                <value>
                    <fullName>Webinar - Illumina Solexa April 2008</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source_SVC__c</fullName>
        <label>Lead Source SVC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field Service</fullName>
                </value>
                <value>
                    <fullName>Inside Service</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Product Sales</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Status_DNA__c</fullName>
        <description>used by DNA Tech</description>
        <label>Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Fallout - Bad contact info</fullName>
                </value>
                <value>
                    <fullName>Fallout - Competitor</fullName>
                </value>
                <value>
                    <fullName>Fallout - Current Customer</fullName>
                </value>
                <value>
                    <fullName>Fallout - Educ./Sandra Porter Prospect</fullName>
                </value>
                <value>
                    <fullName>Fallout - Employee Testing</fullName>
                </value>
                <value>
                    <fullName>Fallout - No budget</fullName>
                </value>
                <value>
                    <fullName>Fallout - No interest</fullName>
                </value>
                <value>
                    <fullName>Fallout - No reply</fullName>
                </value>
                <value>
                    <fullName>Fallout - Not a qualified buyer</fullName>
                </value>
                <value>
                    <fullName>Fallout - Partnership Interest</fullName>
                </value>
                <value>
                    <fullName>Fallout - Press/Investor Person</fullName>
                </value>
                <value>
                    <fullName>Fallout - Trial Unused</fullName>
                </value>
                <value>
                    <fullName>Future Interest</fullName>
                </value>
                <value>
                    <fullName>Stage 0a - FinchTV Download</fullName>
                </value>
                <value>
                    <fullName>Stage 0 - Identified</fullName>
                </value>
                <value>
                    <fullName>Stage 0w - Keep Warm</fullName>
                </value>
                <value>
                    <fullName>Stage 1a - Already working</fullName>
                </value>
                <value>
                    <fullName>Stage 1 - Contacted</fullName>
                </value>
                <value>
                    <fullName>Stage 2a - Trial Account - Inactive</fullName>
                </value>
                <value>
                    <fullName>Stage 2b - Trial Account - Active</fullName>
                </value>
                <value>
                    <fullName>Stage 2c - Trial Account - Extended</fullName>
                </value>
                <value>
                    <fullName>Stage 2d - Trial scheduled, not active</fullName>
                </value>
                <value>
                    <fullName>Stage 2 - Qualified/Needs Assessment</fullName>
                </value>
                <value>
                    <fullName>Stage 3i - iFinch Trial Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PKI_Test_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pharma_R_D_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pharma R&amp;D List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proteomics_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proteomics List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Lead_ID_18__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Lead ID (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Material__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>Status - Material</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Turnback - Call Attempts Complete</fullName>
                </value>
                <value>
                    <fullName>Turnback - Future Opportunity</fullName>
                </value>
                <value>
                    <fullName>Turnback - Bad Phone Number</fullName>
                </value>
                <value>
                    <fullName>Rejected - Bad Contact Details</fullName>
                </value>
                <value>
                    <fullName>Rejected - Not Involved</fullName>
                </value>
                <value>
                    <fullName>Rejected - Distributor</fullName>
                </value>
                <value>
                    <fullName>Rejected - No Interest</fullName>
                </value>
                <value>
                    <fullName>Converted to Opportunity</fullName>
                </value>
                <value>
                    <fullName>Re-Qualified</fullName>
                    <isActive>false</isActive>
                    <label>Re-Qualified</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_of_Spiff__c</fullName>
        <label>Status of Spiff?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eligible</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Not Eligible/Don&apos;t Pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIP_Club_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ASLS/ENV Field</description>
        <inlineHelpText>ASLS/ENV Field</inlineHelpText>
        <label>VIP Club Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cancel_workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>cancelworkflow</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>